save
m: cannot remove 'dtweedie2.cpp': No such file or directory
rm: cannot remove 'ss33.cpp': No such file or directory
In file included from df13fun.cpp:13:
./df13fun.h:48:12: error: 'fvar.hpp' file not found with <angled> include; use "quotes" instead
   48 | #  include <fvar.hpp>
      |            ^~~~~~~~~~
      |            "fvar.hpp"
1 error generated.
df1b2bet.cpp:8:10: fatal error: '../linad99/betacf_val.hpp' file not found
    8 | #include "../linad99/betacf_val.hpp"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
df1b2lme.cpp:12:12: error: 'df1b2fun.h' file not found with <angled> include; use "quotes" instead
   12 | #  include <df1b2fun.h>
      |            ^~~~~~~~~~~~
      |            "df1b2fun.h"
df1b2lme.cpp:13:12: error: 'adrndeff.h' file not found with <angled> include; use "quotes" instead
   13 | #  include <adrndeff.h>
      |            ^~~~~~~~~~~~
      |            "adrndeff.h"
2 errors generated.
df1b2lmn2.cpp:15:12: error: 'df1b2fun.h' file not found with <angled> include; use "quotes" instead
   15 | #  include <df1b2fun.h>
      |            ^~~~~~~~~~~~
      |            "df1b2fun.h"
df1b2lmn2.cpp:16:12: error: 'adrndeff.h' file not found with <angled> include; use "quotes" instead
   16 | #  include <adrndeff.h>
      |            ^~~~~~~~~~~~
      |            "adrndeff.h"
2 errors generated.
df1b2loc.cpp:12:10: error: 'df1b2loc.h' file not found with <angled> include; use "quotes" instead
   12 | #include <df1b2loc.h>
      |          ^~~~~~~~~~~~
      |          "df1b2loc.h"
1 error generated.
df1b2lp10.cpp:12:12: error: 'df1b2fun.h' file not found with <angled> include; use "quotes" instead
   12 | #  include <df1b2fun.h>
      |            ^~~~~~~~~~~~
      |            "df1b2fun.h"
df1b2lp10.cpp:13:12: error: 'adrndeff.h' file not found with <angled> include; use "quotes" instead
   13 | #  include <adrndeff.h>
      |            ^~~~~~~~~~~~
      |            "adrndeff.h"
2 errors generated.
df1b2lp11.cpp:16:12: error: 'df1b2fun.h' file not found with <angled> include; use "quotes" instead
   16 | #  include <df1b2fun.h>
      |            ^~~~~~~~~~~~
      |            "df1b2fun.h"
df1b2lp11.cpp:17:12: error: 'adrndeff.h' file not found with <angled> include; use "quotes" instead
   17 | #  include <adrndeff.h>
      |            ^~~~~~~~~~~~
      |            "adrndeff.h"
2 errors generated.
df1b2qnm.cpp:15:12: error: 'df1b2fun.h' file not found with <angled> include; use "quotes" instead
   15 | #  include <df1b2fun.h>
      |            ^~~~~~~~~~~~
      |            "df1b2fun.h"
df1b2qnm.cpp:16:12: error: 'adrndeff.h' file not found with <angled> include; use "quotes" instead
   16 | #  include <adrndeff.h>
      |            ^~~~~~~~~~~~
      |            "adrndeff.h"
2 errors generated.
dflocmin.cpp:12:12: error: 'df1b2fun.h' file not found with <angled> include; use "quotes" instead
   12 | #  include <df1b2fun.h>
      |            ^~~~~~~~~~~~
      |            "df1b2fun.h"
dflocmin.cpp:13:12: error: 'adrndeff.h' file not found with <angled> include; use "quotes" instead
   13 | #  include <adrndeff.h>
      |            ^~~~~~~~~~~~
      |            "adrndeff.h"
2 errors generated.

